--- a/files/修改客户/styles.css
+++ b/files/修改客户/styles.css
@@ -2081,8 +2081,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -2094,8 +2094,8 @@
   top:610px;
   width:117px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -2691,8 +2691,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -2704,8 +2704,8 @@
   top:67px;
   width:61px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -2789,8 +2789,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -2802,8 +2802,8 @@
   top:67px;
   width:61px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3036,8 +3036,8 @@
   top:347px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3064,8 +3064,8 @@
   top:379px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3127,8 +3127,8 @@
   top:409px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3155,8 +3155,8 @@
   top:440px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3186,8 +3186,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3200,8 +3200,8 @@
   top:409px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3228,8 +3228,8 @@
   top:440px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3256,8 +3256,8 @@
   top:347px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3284,8 +3284,8 @@
   top:379px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3407,8 +3407,8 @@
   top:379px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3438,8 +3438,8 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3452,8 +3452,8 @@
   top:409px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3480,8 +3480,8 @@
   top:440px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -3508,8 +3508,8 @@
   top:347px;
   width:138px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:rgba(0, 0, 0, 0.647058823529412);
@@ -4072,8 +4072,8 @@
   top:516px;
   width:101px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:#FFFFFF;
@@ -4131,8 +4131,8 @@
   top:516px;
   width:45px;
   height:32px;
-  font-family:'微软雅黑 Regular', '微软雅黑';
-  font-weight:400;
+  font-family:'微软雅黑';
+  font-weight:401;
   font-style:normal;
   font-size:14px;
   color:#FFFFFF;
